--- a/TWJieShuQuan/main.storyboard
+++ b/TWJieShuQuan/main.storyboard
@@ -803,20 +803,20 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XMv-bw-uqp">
                                 <rect key="frame" x="0.0" y="94" width="600" height="44"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ggN-im-xAQ">
-                                        <rect key="frame" x="0.0" y="1" width="600" height="42"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入新昵称" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ggN-im-xAQ">
+                                        <rect key="frame" x="15" y="1" width="570" height="42"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="ggN-im-xAQ" secondAttribute="trailing" id="NSx-EX-Cju"/>
+                                    <constraint firstAttribute="trailing" secondItem="ggN-im-xAQ" secondAttribute="trailing" constant="15" id="NSx-EX-Cju"/>
                                     <constraint firstItem="ggN-im-xAQ" firstAttribute="top" secondItem="XMv-bw-uqp" secondAttribute="top" constant="1" id="Oac-kk-iaZ"/>
                                     <constraint firstAttribute="bottom" secondItem="ggN-im-xAQ" secondAttribute="bottom" constant="1" id="aS7-kv-HMM"/>
                                     <constraint firstAttribute="height" constant="44" id="fcS-xr-zYc"/>
-                                    <constraint firstItem="ggN-im-xAQ" firstAttribute="leading" secondItem="XMv-bw-uqp" secondAttribute="leading" id="hL0-vs-nUt"/>
+                                    <constraint firstItem="ggN-im-xAQ" firstAttribute="leading" secondItem="XMv-bw-uqp" secondAttribute="leading" constant="15" id="hL0-vs-nUt"/>
                                 </constraints>
                             </view>
                         </subviews>
