--- a/TWJieShuQuan/main.storyboard
+++ b/TWJieShuQuan/main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="McA-zT-FMQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="McA-zT-FMQ">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -630,9 +630,9 @@
                                             </constraints>
                                             <variation key="default">
                                                 <mask key="constraints">
-                                                    <exclude reference="NQk-jS-Y7x"/>
                                                     <exclude reference="2kF-ip-fm6"/>
                                                     <exclude reference="JIg-zf-24Q"/>
+                                                    <exclude reference="NQk-jS-Y7x"/>
                                                     <exclude reference="QNL-MS-Gd0"/>
                                                 </mask>
                                             </variation>
@@ -666,10 +666,10 @@
                                             </constraints>
                                             <variation key="default">
                                                 <mask key="constraints">
-                                                    <exclude reference="u5l-fo-aEv"/>
                                                     <exclude reference="5u1-DK-Mfb"/>
-                                                    <exclude reference="LlR-DH-hsu"/>
                                                     <exclude reference="Cwu-kY-X9k"/>
+                                                    <exclude reference="LlR-DH-hsu"/>
+                                                    <exclude reference="u5l-fo-aEv"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -1127,57 +1127,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="WHh-HU-i1v">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="104" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="WHh-HU-i1v">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="68" id="tKc-xV-dvT" customClass="FindCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="104" id="tKc-xV-dvT" customClass="FindCell">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tKc-xV-dvT" id="eVH-ta-1T5">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bFd-la-CRE">
-                                                    <rect key="frame" x="8" y="8" width="30" height="30"/>
+                                                    <rect key="frame" x="10" y="10" width="30" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="9U7-uj-JT0"/>
-                                                        <constraint firstAttribute="width" constant="30" id="LTY-Nu-e5d"/>
+                                                        <constraint firstAttribute="height" constant="30" id="6v9-Pg-1i5"/>
+                                                        <constraint firstAttribute="width" constant="30" id="dFt-u0-8D4"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DzY-cY-0Ti">
-                                                    <rect key="frame" x="46" y="30" width="546" height="32"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qi9-yE-E2c">
-                                                    <rect key="frame" x="564" y="8" width="28" height="11"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="13"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <rect key="frame" x="50" y="26" width="23" height="11"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hwP-Ue-YvG">
-                                                    <rect key="frame" x="46" y="8" width="33" height="17"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="17" id="WQa-RO-U0S"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
+                                                    <rect key="frame" x="50" y="10" width="31" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DzY-cY-0Ti">
+                                                    <rect key="frame" x="10" y="45" width="582" height="50"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="bFd-la-CRE" firstAttribute="leading" secondItem="eVH-ta-1T5" secondAttribute="leading" constant="8" id="3mh-wk-zBg"/>
-                                                <constraint firstAttribute="trailing" secondItem="DzY-cY-0Ti" secondAttribute="trailing" constant="8" id="A9I-Lm-oeO"/>
-                                                <constraint firstItem="hwP-Ue-YvG" firstAttribute="top" secondItem="eVH-ta-1T5" secondAttribute="top" constant="8" id="FHj-Ob-F0Z"/>
-                                                <constraint firstItem="Qi9-yE-E2c" firstAttribute="centerY" secondItem="hwP-Ue-YvG" secondAttribute="centerY" constant="-3" id="H0y-tH-gbS"/>
-                                                <constraint firstItem="DzY-cY-0Ti" firstAttribute="top" secondItem="hwP-Ue-YvG" secondAttribute="bottom" constant="5" id="Jsn-HA-rKF"/>
-                                                <constraint firstItem="hwP-Ue-YvG" firstAttribute="leading" secondItem="DzY-cY-0Ti" secondAttribute="leading" id="NKx-SA-Vjf"/>
-                                                <constraint firstItem="bFd-la-CRE" firstAttribute="top" secondItem="eVH-ta-1T5" secondAttribute="top" constant="8" id="Rw3-A9-9u7"/>
-                                                <constraint firstAttribute="trailing" secondItem="Qi9-yE-E2c" secondAttribute="trailing" constant="8" id="SCf-D2-C6g"/>
-                                                <constraint firstItem="Qi9-yE-E2c" firstAttribute="top" secondItem="hwP-Ue-YvG" secondAttribute="top" id="XOL-ZQ-Asr"/>
-                                                <constraint firstAttribute="bottom" secondItem="DzY-cY-0Ti" secondAttribute="bottom" constant="5" id="axw-TH-CYf"/>
-                                                <constraint firstItem="hwP-Ue-YvG" firstAttribute="leading" secondItem="bFd-la-CRE" secondAttribute="trailing" constant="8" id="ifE-n7-Xn8"/>
+                                                <constraint firstItem="bFd-la-CRE" firstAttribute="top" secondItem="eVH-ta-1T5" secondAttribute="top" constant="10" id="0Op-Xz-1XP"/>
+                                                <constraint firstItem="Qi9-yE-E2c" firstAttribute="top" secondItem="hwP-Ue-YvG" secondAttribute="bottom" id="8TC-xc-uxg"/>
+                                                <constraint firstItem="DzY-cY-0Ti" firstAttribute="top" secondItem="bFd-la-CRE" secondAttribute="bottom" constant="5" id="Asn-NI-Gws"/>
+                                                <constraint firstItem="Qi9-yE-E2c" firstAttribute="leading" secondItem="hwP-Ue-YvG" secondAttribute="leading" id="Efo-dW-d2k"/>
+                                                <constraint firstItem="DzY-cY-0Ti" firstAttribute="leading" secondItem="bFd-la-CRE" secondAttribute="leading" id="I42-qn-hgY"/>
+                                                <constraint firstAttribute="bottom" secondItem="DzY-cY-0Ti" secondAttribute="bottom" constant="8" id="OIn-Y3-4BR"/>
+                                                <constraint firstAttribute="trailing" secondItem="DzY-cY-0Ti" secondAttribute="trailing" constant="8" id="PAq-yq-dh8"/>
+                                                <constraint firstItem="bFd-la-CRE" firstAttribute="top" secondItem="hwP-Ue-YvG" secondAttribute="top" id="dxz-ms-nxX"/>
+                                                <constraint firstItem="bFd-la-CRE" firstAttribute="leading" secondItem="eVH-ta-1T5" secondAttribute="leading" constant="10" id="syr-wX-ntz"/>
+                                                <constraint firstItem="hwP-Ue-YvG" firstAttribute="leading" secondItem="bFd-la-CRE" secondAttribute="trailing" constant="10" id="vFZ-xD-qRG"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
