--- a/TWJieShuQuan/main.storyboard
+++ b/TWJieShuQuan/main.storyboard
@@ -700,75 +700,75 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Slh-YK-Jtz">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vF0-pw-cOm">
                                 <rect key="frame" x="0.0" y="94" width="600" height="44"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="原始密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2KK-4G-ClF">
-                                        <rect key="frame" x="0.0" y="1" width="600" height="42"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="当前密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JVN-L3-Hsp">
+                                        <rect key="frame" x="15" y="1" width="570" height="42"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="2KK-4G-ClF" firstAttribute="top" secondItem="Slh-YK-Jtz" secondAttribute="top" constant="1" id="1bm-g0-Hdd"/>
-                                    <constraint firstAttribute="height" constant="44" id="TNx-aB-Hsq"/>
-                                    <constraint firstItem="2KK-4G-ClF" firstAttribute="leading" secondItem="Slh-YK-Jtz" secondAttribute="leading" id="Xgi-LZ-xuY"/>
-                                    <constraint firstAttribute="bottom" secondItem="2KK-4G-ClF" secondAttribute="bottom" constant="1" id="n90-7J-7sC"/>
-                                    <constraint firstAttribute="trailing" secondItem="2KK-4G-ClF" secondAttribute="trailing" id="sIZ-5v-ZhM"/>
+                                    <constraint firstItem="JVN-L3-Hsp" firstAttribute="top" secondItem="vF0-pw-cOm" secondAttribute="top" constant="1" id="9fS-Q0-zJp"/>
+                                    <constraint firstAttribute="trailing" secondItem="JVN-L3-Hsp" secondAttribute="trailing" constant="15" id="9vr-U7-4Cz"/>
+                                    <constraint firstItem="JVN-L3-Hsp" firstAttribute="leading" secondItem="vF0-pw-cOm" secondAttribute="leading" constant="15" id="Qjk-uF-CeN"/>
+                                    <constraint firstAttribute="height" constant="44" id="VJs-VH-bM5"/>
+                                    <constraint firstAttribute="bottom" secondItem="JVN-L3-Hsp" secondAttribute="bottom" constant="1" id="gz2-RZ-wPd"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kWy-Dy-EIw">
-                                <rect key="frame" x="0.0" y="168" width="600" height="44"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FYn-zO-ZWw">
+                                <rect key="frame" x="0.0" y="153" width="600" height="44"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="新密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sHv-Vh-yHz">
-                                        <rect key="frame" x="0.0" y="1" width="600" height="42"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="新密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t47-Fo-xlF">
+                                        <rect key="frame" x="15" y="1" width="570" height="42"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="R4K-nG-lsg"/>
-                                    <constraint firstItem="sHv-Vh-yHz" firstAttribute="leading" secondItem="kWy-Dy-EIw" secondAttribute="leading" id="dDg-Ey-iXV"/>
-                                    <constraint firstAttribute="bottom" secondItem="sHv-Vh-yHz" secondAttribute="bottom" constant="1" id="jwb-0J-duy"/>
-                                    <constraint firstAttribute="trailing" secondItem="sHv-Vh-yHz" secondAttribute="trailing" id="vL9-0w-mjy"/>
-                                    <constraint firstItem="sHv-Vh-yHz" firstAttribute="top" secondItem="kWy-Dy-EIw" secondAttribute="top" constant="1" id="y0x-IP-aEq"/>
+                                    <constraint firstAttribute="height" constant="44" id="6cm-hq-rtJ"/>
+                                    <constraint firstItem="t47-Fo-xlF" firstAttribute="top" secondItem="FYn-zO-ZWw" secondAttribute="top" constant="1" id="VaX-p2-YZ6"/>
+                                    <constraint firstAttribute="bottom" secondItem="t47-Fo-xlF" secondAttribute="bottom" constant="1" id="ZjW-gp-Ya3"/>
+                                    <constraint firstItem="t47-Fo-xlF" firstAttribute="leading" secondItem="FYn-zO-ZWw" secondAttribute="leading" constant="15" id="i3V-m5-nGR"/>
+                                    <constraint firstAttribute="trailing" secondItem="t47-Fo-xlF" secondAttribute="trailing" constant="15" id="wmM-Zq-tyU"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7MT-5z-VVH">
-                                <rect key="frame" x="0.0" y="242" width="600" height="44"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yCW-hx-L3w">
+                                <rect key="frame" x="0.0" y="212" width="600" height="44"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="再次输入" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LPo-ZK-9Ss">
-                                        <rect key="frame" x="0.0" y="1" width="600" height="42"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="再次输入" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JAq-2t-Ipf">
+                                        <rect key="frame" x="15" y="1" width="570" height="42"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <textInputTraits key="textInputTraits"/>
                                     </textField>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="LPo-ZK-9Ss" firstAttribute="top" secondItem="7MT-5z-VVH" secondAttribute="top" constant="1" id="2R0-LS-mk6"/>
-                                    <constraint firstAttribute="height" constant="44" id="Kws-gm-axu"/>
-                                    <constraint firstAttribute="bottom" secondItem="LPo-ZK-9Ss" secondAttribute="bottom" constant="1" id="Rc3-GM-Xb3"/>
-                                    <constraint firstAttribute="trailing" secondItem="LPo-ZK-9Ss" secondAttribute="trailing" id="aUI-WU-ELa"/>
-                                    <constraint firstItem="LPo-ZK-9Ss" firstAttribute="leading" secondItem="7MT-5z-VVH" secondAttribute="leading" id="isi-D0-i3m"/>
+                                    <constraint firstItem="JAq-2t-Ipf" firstAttribute="top" secondItem="yCW-hx-L3w" secondAttribute="top" constant="1" id="5pv-le-W9R"/>
+                                    <constraint firstAttribute="height" constant="44" id="6JV-nW-z53"/>
+                                    <constraint firstAttribute="bottom" secondItem="JAq-2t-Ipf" secondAttribute="bottom" constant="1" id="B7p-VA-KJB"/>
+                                    <constraint firstAttribute="trailing" secondItem="JAq-2t-Ipf" secondAttribute="trailing" constant="15" id="hYi-gb-bzj"/>
+                                    <constraint firstItem="JAq-2t-Ipf" firstAttribute="leading" secondItem="yCW-hx-L3w" secondAttribute="leading" constant="15" id="om3-VI-ce7"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="kWy-Dy-EIw" firstAttribute="leading" secondItem="Tcy-KK-rUL" secondAttribute="leading" id="EHe-jQ-IGa"/>
-                            <constraint firstItem="kWy-Dy-EIw" firstAttribute="top" secondItem="Slh-YK-Jtz" secondAttribute="bottom" constant="30" id="GzH-Dz-3pK"/>
-                            <constraint firstAttribute="trailing" secondItem="7MT-5z-VVH" secondAttribute="trailing" id="ONe-45-EUS"/>
-                            <constraint firstAttribute="trailing" secondItem="Slh-YK-Jtz" secondAttribute="trailing" id="RSe-fE-HkC"/>
-                            <constraint firstItem="7MT-5z-VVH" firstAttribute="leading" secondItem="Tcy-KK-rUL" secondAttribute="leading" id="Yvb-0i-fC8"/>
-                            <constraint firstItem="Slh-YK-Jtz" firstAttribute="top" secondItem="Onc-2k-f3C" secondAttribute="bottom" constant="30" id="i0Z-UV-mGe"/>
-                            <constraint firstItem="Slh-YK-Jtz" firstAttribute="leading" secondItem="Tcy-KK-rUL" secondAttribute="leading" id="jMb-eG-hxP"/>
-                            <constraint firstItem="7MT-5z-VVH" firstAttribute="top" secondItem="kWy-Dy-EIw" secondAttribute="bottom" constant="30" id="rA4-J5-UFV"/>
-                            <constraint firstAttribute="trailing" secondItem="kWy-Dy-EIw" secondAttribute="trailing" id="uyr-s3-hsA"/>
+                            <constraint firstItem="FYn-zO-ZWw" firstAttribute="top" secondItem="vF0-pw-cOm" secondAttribute="bottom" constant="15" id="1k8-CS-NZt"/>
+                            <constraint firstItem="FYn-zO-ZWw" firstAttribute="leading" secondItem="Tcy-KK-rUL" secondAttribute="leading" id="3MP-im-V1R"/>
+                            <constraint firstItem="yCW-hx-L3w" firstAttribute="leading" secondItem="Tcy-KK-rUL" secondAttribute="leading" id="CEm-pm-WTo"/>
+                            <constraint firstAttribute="trailing" secondItem="yCW-hx-L3w" secondAttribute="trailing" id="CMZ-PV-L8V"/>
+                            <constraint firstItem="yCW-hx-L3w" firstAttribute="top" secondItem="FYn-zO-ZWw" secondAttribute="bottom" constant="15" id="r73-Fo-R7n"/>
+                            <constraint firstAttribute="trailing" secondItem="vF0-pw-cOm" secondAttribute="trailing" id="tRz-gt-5b0"/>
+                            <constraint firstItem="vF0-pw-cOm" firstAttribute="top" secondItem="Onc-2k-f3C" secondAttribute="bottom" constant="30" id="tht-sA-HRG"/>
+                            <constraint firstItem="vF0-pw-cOm" firstAttribute="leading" secondItem="Tcy-KK-rUL" secondAttribute="leading" id="x8h-Pd-Kf3"/>
+                            <constraint firstAttribute="trailing" secondItem="FYn-zO-ZWw" secondAttribute="trailing" id="z4s-Ex-7r9"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="修改密码" id="eQI-3Z-BsK">
@@ -779,9 +779,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="comfirPassword" destination="LPo-ZK-9Ss" id="dli-PZ-eRq"/>
-                        <outlet property="oldPassword" destination="2KK-4G-ClF" id="WSA-4O-ulG"/>
-                        <outlet property="resetPassword" destination="sHv-Vh-yHz" id="Oqw-kf-7VO"/>
+                        <outlet property="comfirPassword" destination="JAq-2t-Ipf" id="iqX-ZE-Wm1"/>
+                        <outlet property="oldPassword" destination="JVN-L3-Hsp" id="cAv-H9-dyg"/>
+                        <outlet property="resetPassword" destination="t47-Fo-xlF" id="ioL-it-88C"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YjD-DM-tI7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -820,7 +820,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="XMv-bw-uqp" secondAttribute="trailing" id="bG3-28-AQe"/>
                             <constraint firstItem="XMv-bw-uqp" firstAttribute="top" secondItem="y2p-n2-Gf4" secondAttribute="bottom" constant="30" id="gcO-LW-nUp"/>
